[package]
name = "maze_solver"
version = "0.1.0"
authors = ["Stian Soltvedt <soltvedt.stian@gmail.com>"]
description = "Solves a maze provided by an image file."
readme = "README.md"
repository = "https://github.com/stisol/Maze-Solver"
license = "MIT"

[dependencies]
image = "^0.18"
pathfinding = "^0.7.0"
clap = "^2.31"
